pyem (0.5.5) Mon, 23 Oct 2006 18:48:15 +0900

	* Bump to 0.5.5
	* Added bic method to GMM.
	* A few fixes for docstrings
	* Added bibliography to the doc

pyem (0.5.4) Fri, 20 Oct 2006 12:52:01 +0900

	* Bump to 0.5.4
	* Online EM is basically implemented, with tests. The API
	should be fixed to be choherent (lacks the Trainer Class, too).
	The class is not imported by default, still (available as _OnGMM)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.3) Thu, 12 Oct 2006 21:08:21 +0900

	* Change the layout and setup.py for inclusion to scipy.
	* Initial script for online em.

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.3) Tue, 03 Oct 2006 18:28:13 +0900

	* Update tests so that they work within the numpy test framework
	* Update version to 0.5.3

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.2) Tue, 29 Aug 2006 14:53:49 +0900

	* Add a class method to GM to create a model directly from
	w, mean and var values (uses decorator: python 2.4)
	* Add a plot1d method to GM to plot a GM in one dimension (where
	the confidence ell kind of plot does not make sense). This draws
	each Gaussian pdf, fill the area on the confidence interval
	(matplotlib is really cool)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.2) Mon, 28 Aug 2006 13:20:13 +0900

	* Add a plot method to Gm class, so that it is easier
	to plot a GM model interactively (needs matplotlib)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.2) Thu, 24 Aug 2006 19:42:28 +0900

	* put version to 0.5.2
	* Correct a bug with init method in GMM (change class method
	to object method).
	* modify the setup for a more flexible system

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.1) Thu, 17 Aug 2006 11:54:41 +0900

	* put version to 0.5.1
	* Update to last numpy (change axis args between 1.0b1 and 1.0b2,
	change type args of ones and zeros)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 
